--- a/index.html
+++ b/index.html
@@ -568,12 +568,12 @@
       </div>
       <!-- Form Section -->
       <div class="col-lg-5 col-md-10 col-12 d-flex align-items-start">
-        <form class="application-form" action="https://formsubmit.co/sumathynl.maths@gmail.com" method="POST">
+        <form class="application-form" id="contactForm" onsubmit=formsub() method="POST">
           <h2 class="text-center mb-4" style="color:#112266; font-weight:700;">Application Form</h2>
           <div class="row mb-3">
             <div class="col-6">
               <label for="firstName" class="form-label">Student Name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
+              <input type="text" class="form-control" id="name" placeholder="First Name" required>
             </div>
             <div class="col-6">
               <label class="form-label" style="color:transparent;">Last Name</label>
@@ -800,23 +800,26 @@
     </div>
   </footer>
 <script>
-  document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault(); // prevent normal form submission
+  document.addEventListener("DOMContentLoaded", function () {
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+      e.preventDefault(); // prevent normal form submission
 
-    const name = encodeURIComponent(document.getElementById('name').value);
-    const email = encodeURIComponent(document.getElementById('email').value);
-    const message = encodeURIComponent(document.getElementById('message').value);
+      const name = encodeURIComponent(document.getElementById('name').value);
+      const email = encodeURIComponent(document.getElementById('email').value);
+      const phone = encodeURIComponent(document.getElementById('phone').value);
 
-    const phoneNumber = '918903591984'; // your WhatsApp number with country code, no plus sign
-    const text = `Name: ${name}%0AEmail: ${email}%0AMessage: ${message}`;
+      const whatsappNumber = '918903591984'; // your WhatsApp number with country code
+      const text = `Name: ${name}%0AEmail: ${email}%0APhone: ${phone}`;
 
-    const whatsappURL = `https://wa.me/${phoneNumber}?text=${text}`;
-
-    // Open WhatsApp chat with pre-filled message
-    window.open(whatsappURL, '_blank');
+      const whatsappURL = `https://wa.me/${whatsappNumber}?text=${text}`;
+      window.open(whatsappURL, '_blank');
+    });
   });
 </script>
   <!-- Bootstrap JS Bundle (required for navbar collapse) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+
+  </script>
 </body>
 </html>
