--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BEST EDUCATION NIOS HUB</title>
+  <meta name="description" content="Register for 10th and 12th NIOS admission. Online application form, guidance, and support for open school students., best nios tution, nios best tution center, best tution center, tirunelveli, nios tirunelveli, nios just dial tirunelveli, palayamkotai nios, best nios, nios study center">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
