--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
   gtag('config', 'AW-17638789496');
 </script>
+  <!-- Event snippet for Book appointment conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17638789496/2iUdCMz_k6obEPii6tpB',
+      'value': 1.0,
+      'currency': 'INR'
+  });
+</script>
+
   <meta charset="UTF-8">
   <title>BEST EDUCATION NIOS HUB</title>
   <meta name="description" content="Register for 10th and 12th NIOS admission. Online application form, nios tirunelveli, nios exam date, nios doubt,nios coaching,nios , niosbest provides best Nios Coaching and Nios admission.Nios coaching centre and Nios online coaching classes. National Institute of Open Schooling(NIOS), nios tma, guidance, and support for open school students., best nios tution, nios best tution center, best tution center, tirunelveli, nios tirunelveli, nios just dial tirunelveli, palayamkotai nios, best nios, nios study center">
