--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </script>
 
   <meta charset="UTF-8">
-  <title>BEST EDUCATION NIOS HUB</title>
+  <title>BEST NIOS conselling</title>
   <meta name="description" content="Register for 10th and 12th NIOS admission. Online application form, nios tirunelveli, nios exam date, nios doubt,nios coaching,nios , niosbest provides best Nios Coaching and Nios admission.Nios coaching centre and Nios online coaching classes. National Institute of Open Schooling(NIOS), nios tma, guidance, and support for open school students., best nios tution, nios best tution center, best tution center, tirunelveli, nios tirunelveli, nios just dial tirunelveli, palayamkotai nios, best nios, nios study center">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap 5 CSS -->
@@ -579,10 +579,10 @@
         </div>
         <div class="why-title">WHY NIOS &amp; WITH US ?</div>
         <p>
-          NIOS (National Institute of Open Schooling) provides a flexible and affordable educational pathway. Students can study at their own pace, choose subjects, and take exams when ready. NIOS certificates are recognized for higher education and jobs, offering equal opportunities.
+          NIOS  provides a flexible and affordable educational pathway. Students can study at their own pace, choose subjects, and take exams when ready. NIOS certificates are recognized for higher education and jobs, offering equal opportunities.
         </p>
         <p>
-          At Best Education NIOS Hub, we provide expert guidance and resources to help you succeed. Our team assists with subject selection, exam preparation, and all administrative processes, ensuring a smooth and motivating learning experience.
+          At BEST NIOS COUNSELLING, we provide expert guidance and resources to help you succeed. Our team assists with subject selection, exam preparation, and all administrative processes, ensuring a smooth and motivating learning experience.
         </p>
       </div>
       <!-- Form Section -->
@@ -793,7 +793,7 @@
       <div class="row">
         <div class="col-md-4 mb-3">
           <h5>About NIOS</h5>
-          <p>At Best Education NIOS Hub, we provide expert guidance and resources to help you succeed. Our team assists with subject selection, exam preparation, and all administrative processes, ensuring a smooth and motivating learning experience.</p>
+          <p>At BEST NIOS COUNSELLING, we provide expert guidance and resources to help you succeed. Our team assists with subject selection, exam preparation, and all administrative processes, ensuring a smooth and motivating learning experience.</p>
         </div>
         <div class="col-md-4 mb-3">
           <h5>Course Materials</h5>
